подключает переменные в scss

--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -6,11 +6,11 @@
   }
   .logoweb,
   .logo {
-    font-family: var(--secondary-font);
+    font-family: $secondary-font;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.192;
     letter-spacing: 0.03em;
-    color: var(--accent-color);
+    color: $accent-color;
     text-decoration: none;
   }
