--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -13,7 +13,7 @@
   position: relative;
 }
 .work-decription {
-  font-family: var(--main-font);
+  font-family: $main-font;
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
