--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -26,7 +26,7 @@
     align-items: center;
     letter-spacing: 0.06em;
     color: #ffffff;
-    background: var(--accent-color);
+    background: $accent-color;
     min-width: 200px;
     height: 50px;
     cursor: pointer;
