--- a/css/main.css
+++ b/css/main.css
@@ -10,19 +10,10 @@
   overflow: hidden;
 }
 
-:root {
-  --main-font: "Roboto", sans-serif;
-  --secondary-font: "Raleway", sans-serif;
-  --accent-color: #2196f3;
-  --a:-webkit-any-link {
-      text-decoration: none;
+/* $a:-webkit-any-link 
+      { text-decoration: none;
       padding: 0;
-      margin: 0;
-    }
-  
-  ;
-}
-
+      margin: 0; }*/
 .link {
   text-decoration: none;
 }
@@ -60,7 +51,7 @@ img {
 }
 
 body {
-  font-family: var(--main-font);
+  font-family: "Roboto", sans-serif;
 }
 
 .container {
@@ -90,12 +81,12 @@ body {
 
 .logoweb,
 .logo {
-  font-family: var(--secondary-font);
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.192;
   letter-spacing: 0.03em;
-  color: var(--accent-color);
+  color: #2196f3;
   text-decoration: none;
 }
 
@@ -138,7 +129,7 @@ body {
 }
 
 .modal-form-text {
-  font-family: var(--main-font);
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.167;
@@ -168,7 +159,7 @@ body {
 }
 
 .modal-form-title {
-  font-family: var(--main-font);
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
@@ -197,7 +188,7 @@ body {
 }
 
 .modal-form-input:focus + .modal-form-icon {
-  fill: var(--accent-color);
+  fill: #2196f3;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -211,7 +202,7 @@ body {
 
 .modal-form-input:focus {
   outline: none;
-  border-color: var(--accent-color);
+  border-color: #2196f3;
   cursor: pointer;
 }
 
@@ -229,13 +220,13 @@ body {
 
 .modal-form-msg:focus {
   outline: none;
-  border-color: var(--accent-color);
+  border-color: #2196f3;
   cursor: pointer;
 }
 
 .form-email-field:focus {
   outline: none;
-  border-color: var(--accent-color);
+  border-color: #2196f3;
   cursor: pointer;
 }
 
@@ -263,7 +254,7 @@ body {
 
 .close-btn:hover .close,
 .close-btn:focus .close {
-  fill: var(--accent-color);
+  fill: #2196f3;
 }
 
 .is-hidden {
@@ -274,7 +265,7 @@ body {
 
 .modal-form-policy-txt {
   margin-bottom: 30px;
-  font-family: var(--main-font);
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.714;
@@ -294,8 +285,8 @@ body {
 }
 
 .modal-form-policy:checked + .modal-form-policy-txt::before {
-  background-color: var(--accent-color);
-  border: 2px var(--accent-color);
+  background-color: #2196f3;
+  border: 2px #2196f3;
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='16' height='15' viewBox='0 0 13 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.95703 4.75166L1.88825 4.68604L1.81923 4.75141L0.93123 5.59258L0.854858 5.66492L0.930974 5.73753L4.42671 9.07236L4.49574 9.1382L4.56476 9.07236L12.069 1.91352L12.1449 1.84116L12.069 1.76881L11.1873 0.927644L11.1183 0.861826L11.0493 0.927611L4.49577 7.17353L1.95703 4.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -303,14 +294,14 @@ body {
 
 .modal-policy-link {
   margin-bottom: 30px;
-  font-family: var(--main-font);
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-decoration-skip-ink: none;
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .chek-policy-box {
@@ -319,7 +310,7 @@ body {
 }
 
 ::placeholder {
-  font-family: var(--main-font);
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.250;
@@ -350,7 +341,7 @@ body {
     margin-bottom: 10px;
   }
    &-text {
-    font-family: var(--main-font);
+    font-family: $main-font;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.167;
@@ -380,7 +371,7 @@ body {
   }
   
   &-title {
-    font-family: var(--main-font);
+    font-family: $main-font;
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
@@ -411,7 +402,7 @@ body {
    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
    .modal-form-input:focus + & {
-    fill: var(--accent-color);
+    fill: $accent-color;
     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
    }
   }
@@ -424,14 +415,14 @@ body {
     
     &:focus {
       outline: none;
-    border-color: var(--accent-color); 
+    border-color: $accent-color; 
     cursor: pointer;
     }
   }
  
   .form-email-field:focus {
     outline: none;
-    border-color: var(--accent-color); 
+    border-color: $accent-color; 
     cursor: pointer;
   }
   
@@ -480,7 +471,7 @@ body {
     
     .close-btn:hover &, 
     .close-btn:focus & {    
-       fill: var(--accent-color);}
+       fill: $accent-color;}
     }
   .modal-form-msg {
     width: 100%;
@@ -495,7 +486,7 @@ body {
 
     &:focus {
       outline: none;
-    border-color: var(--accent-color); 
+    border-color: $accent-color; 
     cursor: pointer;
     }
   }
@@ -508,7 +499,7 @@ body {
    
   .modal-form-policy-txt {
     margin-bottom: 30px;
-    font-family: var(--main-font);
+    font-family: $main-font;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.714;
@@ -526,8 +517,8 @@ body {
     border-radius: 2px; 
 
     .modal-form-policy:checked + & {
-      background-color: var(--accent-color);
-      border: 2px var(--accent-color);
+      background-color: $accent-color;
+      border: 2px $accent-color;
        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='16' height='15' viewBox='0 0 13 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.95703 4.75166L1.88825 4.68604L1.81923 4.75141L0.93123 5.59258L0.854858 5.66492L0.930974 5.73753L4.42671 9.07236L4.49574 9.1382L4.56476 9.07236L12.069 1.91352L12.1449 1.84116L12.069 1.76881L11.1873 0.927644L11.1183 0.861826L11.0493 0.927611L4.49577 7.17353L1.95703 4.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/svg%3E");
        background-repeat: no-repeat;
        transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);  
@@ -538,14 +529,14 @@ body {
 
   .modal-policy-link {
     margin-bottom: 30px;
-    font-family: var(--main-font);
+    font-family: $main-font;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-decoration-skip-ink:none;
- color: var(--accent-color);
+ color: $accent-color;
  }
 
 
@@ -558,7 +549,7 @@ body {
   
   
   ::placeholder {
-    font-family: var(--main-font);
+    font-family: $main-font;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.250;
@@ -652,7 +643,7 @@ body {
 }
 
 .header-address-link:focus, .header-address-link:hover {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .header-list-item:not(:last-child) {
@@ -703,7 +694,7 @@ body {
 
 .header-address-link:hover .address-icon,
 .header-address-link:focus .address-icon {
-  fill: var(--accent-color);
+  fill: #2196f3;
 }
 
 .nav-list-link {
@@ -717,22 +708,22 @@ body {
 }
 
 .nav-list-link:focus, .nav-list-link:hover {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .footer-list-link:hover,
 .footer-list-link:hover {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .buttons-list-item:hover,
 .buttons-list-item:focus {
-  background-color: var(--accent-color);
+  background-color: #2196f3;
   color: #ffffff;
 }
 
 .current {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .hero {
@@ -765,7 +756,7 @@ body {
   align-items: center;
   letter-spacing: 0.06em;
   color: #ffffff;
-  background: var(--accent-color);
+  background: #2196f3;
   min-width: 200px;
   height: 50px;
   cursor: pointer;
@@ -793,7 +784,7 @@ body {
 }
 
 .work-decription {
-  font-family: var(--main-font);
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
@@ -954,7 +945,7 @@ body {
 }
 
 .social-list-link:hover, .social-list-link:focus {
-  background-color: var(--accent-color);
+  background-color: #2196f3;
 }
 
 .social-list-icon {
@@ -998,20 +989,20 @@ body {
 }
 
 .clients-link:hover, .clients-link:focus {
-  color: var(--accent-color);
-  border-color: var(--accent-color);
+  color: #2196f3;
+  border-color: #2196f3;
 }
 
-.clients-link-icon {
+.clients-icon {
   width: 168px;
   height: 50px;
   fill: #AFB1B8;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-link:hover .clients-link-icon,
-.clients-link:focus .clients-link-icon {
-  fill: var(--accent-color);
+.clients-link:hover .clients-icon,
+.clients-link:focus .clients-icon {
+  fill: #2196f3;
 }
 
 /*.clients-list {
@@ -1036,14 +1027,14 @@ body {
 
     &:hover, 
     &:focus {
-      color: var(--accent-color);
-    border-color: var(--accent-color);
+      color: $accent-color;
+    border-color: $accent-color;
     } 
   }
   
   .clients-link:hover .clients-icon,
   .clients-link:focus .clients-icon {
-    fill: var(--accent-color);
+    fill: $accent-color;
   }
   
   .clients-icon {
@@ -1087,7 +1078,7 @@ body {
   justify-content: center;
   letter-spacing: 0.06em;
   color: #ffffff;
-  background: var(--accent-color);
+  background: #2196f3;
   min-width: 200px;
   height: 50px;
   cursor: pointer;
@@ -1114,7 +1105,7 @@ body {
 }
 
 .footer-list-link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .footer-address-container {
@@ -1146,7 +1137,7 @@ body {
 }
 
 .footer-social-list-link:hover, .footer-social-list-link:focus {
-  background-color: var(--accent-color);
+  background-color: #2196f3;
 }
 
 .footer-social-list-icon {
@@ -1174,7 +1165,7 @@ body {
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   padding: 15px 16px;
-  font-family: var(--main-font);
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   color: rgba(255, 255, 255, 0.6);
   font-size: 16px;
@@ -1216,7 +1207,7 @@ body {
     justify-content: center;
     letter-spacing: 0.06em;
     color: #ffffff;
-    background: var(--accent-color);
+    background: $accent-color;
     min-width: 200px;
     height: 50px;
     cursor: pointer;
@@ -1300,7 +1291,7 @@ body {
   left: 0;
   transition: transform 250ms linear;
   transform: translateY(100%);
-  font-family: var(--main-font);
+  font-family: "Roboto", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
