--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -4,7 +4,7 @@
      padding-bottom: 20px;
      
      &-item {
-      font-family: "Roboto", sans-serif;
+      font-family: $main-font;
       font-weight: 500;
       font-size: 16px;
       line-height: 1.625;
@@ -29,7 +29,7 @@
   }
   
   .btn-current {
-    font-family: "Roboto", sans-serif;
+    font-family: $main-font;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.625;
