--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -19,7 +19,7 @@ padding: 40px;
   margin-bottom: 10px;
 }
  &-text {
-  font-family: var(--main-font);
+  font-family: $main-font;
 font-weight: 400;
 font-size: 12px;
 line-height: 1.167;
@@ -40,7 +40,7 @@ color: #757575;
   max-width: 200px;
   height: 50px;
   cursor: pointer;
-  background: #2196f3;
+  background: $accent-color;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   padding: 10px 32px;
@@ -49,7 +49,7 @@ color: #757575;
 }
 
 &-title {
-  font-family: var(--main-font);
+  font-family: $main-font;
 font-style: normal;
 font-weight: 700;
 font-size: 20px;
@@ -77,7 +77,7 @@ margin-bottom: 12px;
  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
  .modal-form-input:focus + & {
-  fill: var(--accent-color);
+  fill: $accent-color;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 }
@@ -90,7 +90,7 @@ margin-bottom: 12px;
   
   &:focus {
     outline: none;
-  border-color: var(--accent-color); 
+  border-color: $accent-color; 
   cursor: pointer;
   }
 }
@@ -108,7 +108,7 @@ margin-bottom: 12px;
 
   &:focus {
     outline: none;
-  border-color: var(--accent-color); 
+  border-color: $accent-color; 
   cursor: pointer;
   }
 }
@@ -116,7 +116,7 @@ margin-bottom: 12px;
 
 .form-email-field:focus {
   outline: none;
-  border-color: var(--accent-color); 
+  border-color: $accent-color; 
   cursor: pointer;
 }
 
@@ -142,7 +142,7 @@ justify-content: center;}
   
   .close-btn:hover &, 
   .close-btn:focus & {    
-     fill: var(--accent-color);}
+     fill: $accent-color;}
   }
 
 
@@ -154,7 +154,7 @@ justify-content: center;}
  
 .modal-form-policy-txt {
   margin-bottom: 30px;
-  font-family: var(--main-font);
+  font-family: $main-font;
 font-weight: 400;
 font-size: 14px;
 line-height: 1.714;
@@ -172,8 +172,8 @@ transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 2px; 
 
   .modal-form-policy:checked + & {
-    background-color: var(--accent-color);
-    border: 2px var(--accent-color);
+    background-color: $accent-color;
+    border: 2px $accent-color;
      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='16' height='15' viewBox='0 0 13 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.95703 4.75166L1.88825 4.68604L1.81923 4.75141L0.93123 5.59258L0.854858 5.66492L0.930974 5.73753L4.42671 9.07236L4.49574 9.1382L4.56476 9.07236L12.069 1.91352L12.1449 1.84116L12.069 1.76881L11.1873 0.927644L11.1183 0.861826L11.0493 0.927611L4.49577 7.17353L1.95703 4.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/svg%3E");
      background-repeat: no-repeat;
      transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);  
@@ -184,14 +184,14 @@ transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .modal-policy-link {
   margin-bottom: 30px;
-  font-family: var(--main-font);
+  font-family: $main-font;
 font-weight: 400;
 font-size: 14px;
 line-height: 1.714;
 letter-spacing: 0.03em;
 transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 text-decoration-skip-ink:none;
-color: var(--accent-color);
+color: $accent-color;
 }
 
 .chek-policy-box {
@@ -200,7 +200,7 @@ color: var(--accent-color);
 }
  
 ::placeholder {
-  font-family: var(--main-font);
+  font-family: $main-font;
 font-weight: 400;
 font-size: 16px;
 line-height: 1.250;
@@ -232,7 +232,7 @@ color: rgba(255, 255, 255, 0.6);
     margin-bottom: 10px;
   }
    &-text {
-    font-family: var(--main-font);
+    font-family: $main-font;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.167;
@@ -262,7 +262,7 @@ color: rgba(255, 255, 255, 0.6);
   }
   
   &-title {
-    font-family: var(--main-font);
+    font-family: $main-font;
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
@@ -293,7 +293,7 @@ color: rgba(255, 255, 255, 0.6);
    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
    .modal-form-input:focus + & {
-    fill: var(--accent-color);
+    fill: $accent-color;
     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
    }
   }
@@ -306,14 +306,14 @@ color: rgba(255, 255, 255, 0.6);
     
     &:focus {
       outline: none;
-    border-color: var(--accent-color); 
+    border-color: $accent-color; 
     cursor: pointer;
     }
   }
  
   .form-email-field:focus {
     outline: none;
-    border-color: var(--accent-color); 
+    border-color: $accent-color; 
     cursor: pointer;
   }
   
@@ -362,7 +362,7 @@ color: rgba(255, 255, 255, 0.6);
     
     .close-btn:hover &, 
     .close-btn:focus & {    
-       fill: var(--accent-color);}
+       fill: $accent-color;}
     }
   .modal-form-msg {
     width: 100%;
@@ -377,7 +377,7 @@ color: rgba(255, 255, 255, 0.6);
 
     &:focus {
       outline: none;
-    border-color: var(--accent-color); 
+    border-color: $accent-color; 
     cursor: pointer;
     }
   }
@@ -390,7 +390,7 @@ color: rgba(255, 255, 255, 0.6);
    
   .modal-form-policy-txt {
     margin-bottom: 30px;
-    font-family: var(--main-font);
+    font-family: $main-font;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.714;
@@ -408,8 +408,8 @@ color: rgba(255, 255, 255, 0.6);
     border-radius: 2px; 
 
     .modal-form-policy:checked + & {
-      background-color: var(--accent-color);
-      border: 2px var(--accent-color);
+      background-color: $accent-color;
+      border: 2px $accent-color;
        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='16' height='15' viewBox='0 0 13 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.95703 4.75166L1.88825 4.68604L1.81923 4.75141L0.93123 5.59258L0.854858 5.66492L0.930974 5.73753L4.42671 9.07236L4.49574 9.1382L4.56476 9.07236L12.069 1.91352L12.1449 1.84116L12.069 1.76881L11.1873 0.927644L11.1183 0.861826L11.0493 0.927611L4.49577 7.17353L1.95703 4.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/svg%3E");
        background-repeat: no-repeat;
        transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);  
@@ -420,14 +420,14 @@ color: rgba(255, 255, 255, 0.6);
 
   .modal-policy-link {
     margin-bottom: 30px;
-    font-family: var(--main-font);
+    font-family: $main-font;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-decoration-skip-ink:none;
- color: var(--accent-color);
+ color: $accent-color;
  }
 
 
@@ -440,7 +440,7 @@ color: rgba(255, 255, 255, 0.6);
   
   
   ::placeholder {
-    font-family: var(--main-font);
+    font-family: $main-font;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.250;
