--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -17,22 +17,23 @@
           transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
            &:hover, 
            &:focus {
-            color: var(--accent-color);
-            border-color: var(--accent-color);
+            color: $accent-color;
+            border-color: $accent-color;
             } 
-        &-icon {
-          width: 168px;
-          height: 50px;
-          fill: #AFB1B8;
-          transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-    
-       .clients-link:hover &,
-       .clients-link:focus & {
-         fill: var(--accent-color);
-                           }
-        }
+          }
+
+         &-icon {
+    width: 168px;
+    height: 50px;
+    fill: #AFB1B8;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   .clients-link:hover &,
+   .clients-link:focus & {
+     fill: $accent-color;
+                     }
   }
   }
+  
    
   
 
@@ -58,14 +59,14 @@
 
     &:hover, 
     &:focus {
-      color: var(--accent-color);
-    border-color: var(--accent-color);
+      color: $accent-color;
+    border-color: $accent-color;
     } 
   }
   
   .clients-link:hover .clients-icon,
   .clients-link:focus .clients-icon {
-    fill: var(--accent-color);
+    fill: $accent-color;
   }
   
   .clients-icon {
