--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -29,7 +29,7 @@
     justify-content: center;
     letter-spacing: 0.06em;
     color: #ffffff;
-    background: var(--accent-color);
+    background: $accent-color;
     min-width: 200px;
     height: 50px;
     cursor: pointer;
@@ -54,7 +54,7 @@
     text-decoration: none;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:focus {
-    color: var(--accent-color);
+    color: $accent-color;
   }
 }
 
@@ -89,7 +89,7 @@
     
      &:hover,
      &:focus {
-    background-color: var(--accent-color); 
+    background-color: $accent-color; 
   }
     }
     &-icon {
@@ -117,7 +117,7 @@
         border-radius: 4px;
         border: 1px solid rgba(255, 255, 255, 0.3);
         padding: 15px 16px;
-        font-family: var(--main-font);
+        font-family: $main-font;
       font-style: normal;
       color: rgba(255, 255, 255, 0.6);
       font-size: 16px;
@@ -159,7 +159,7 @@
     justify-content: center;
     letter-spacing: 0.06em;
     color: #ffffff;
-    background: var(--accent-color);
+    background: $accent-color;
     min-width: 200px;
     height: 50px;
     cursor: pointer;
